deploy server to app service

--- a/sdk/spring/azure-spring-boot-samples/azure-spring-boot-sample-keyvault-certificates-client-side/src/main/resources/application.yml
+++ b/sdk/spring/azure-spring-boot-samples/azure-spring-boot-sample-keyvault-certificates-client-side/src/main/resources/application.yml
@@ -7,3 +7,5 @@ azure:
     # managed-identity:  # The user-assigned managed identity object-id to use.
 server:
   port: 8080
+  ssl:
+    enabled: false
