--- a/sdk/spring/azure-spring-boot-samples/azure-spring-boot-sample-keyvault-certificates-client-side/pom.xml
+++ b/sdk/spring/azure-spring-boot-samples/azure-spring-boot-sample-keyvault-certificates-client-side/pom.xml
@@ -30,9 +30,19 @@
     <dependency>
       <groupId>com.azure.spring</groupId>
       <artifactId>azure-spring-boot-starter-keyvault-certificates</artifactId>
-      <version>3.0.0-beta.6</version> <!-- {x-version-update;com.azure.spring:azure-spring-boot-starter-keyvault-certificates;current} -->
+      <version>3.0.0-beta.5</version> <!-- {x-version-update;com.azure.spring:azure-spring-boot-starter-keyvault-certificates;current} -->
     </dependency>
-
+<!--    <dependency>-->
+<!--      <groupId>org.apache.httpcomponents.client5</groupId>-->
+<!--      <artifactId>httpclient5</artifactId>-->
+<!--      <version>5.0.3</version>-->
+<!--      &lt;!&ndash; {x-version-update;org.apache.httpcomponents.client5:httpclient5;external_dependency} &ndash;&gt;-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.azure</groupId>-->
+<!--      <artifactId>azure-security-keyvault-jca</artifactId>-->
+<!--      <version>1.0.0-beta.6</version> &lt;!&ndash; {x-version-update;com.azure:azure-security-keyvault-jca;dependency} &ndash;&gt;-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
